--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -21,8 +21,15 @@ linter:
   # `// ignore_for_file: name_of_lint` syntax on the line or in the file
   # producing the lint.
   rules:
-    # avoid_print: false  # Uncomment to disable the `avoid_print` rule
-    # prefer_single_quotes: true  # Uncomment to enable the `prefer_single_quotes` rule
+    - always_declare_return_types
+    - avoid_print
+    - prefer_final_fields
+    - prefer_const_constructors
+    - avoid_dynamic
+    - always_use_package_imports
+    - always_specify_types
+    - avoid_unnecessary_containers
+    - prefer_single_quotes
 
 # Additional information about this file can be found at
 # https://dart.dev/guides/language/analysis-options
