--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,6 +21,7 @@ dependencies:
   intl: ^0.20.2
   easy_localization: ^3.0.7+1
   flutter_dotenv: ^5.1.0
+  logging: ^1.0.2
 
 dev_dependencies:
   flutter_test:
